--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "date-fns": "^4.1.0",
         "lodash": "^4.17.21",
         "react": "^19.0.0",
+        "react-color": "^2.19.3",
         "react-dom": "^19.0.0",
         "react-icons": "^5.4.0",
         "react-lottie": "^1.2.10",
