--- a/.env.example
+++ b/.env.example
@@ -66,3 +66,6 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 
 REAL_ID_API_HOST=https://ri-dyl-core.ngrok.io
+
+STRIPE_KEY=
+STRIPE_SECRET=
