--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "stripe/stripe-php": "^16.5",
         "symfony/http-client": "^7.2",
         "symfony/postmark-mailer": "^7.2",
         "tightenco/ziggy": "^2.0"
