--- a/package.json
+++ b/package.json
@@ -52,10 +52,12 @@
         "@tippyjs/react": "^4.2.6",
         "@vitejs/plugin-react": "^4.3.4",
         "chrono-node": "^2.7.7",
+        "classnames": "^2.5.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "lodash": "^4.17.21",
         "react": "^19.0.0",
+        "react-copy-to-clipboard": "^5.1.0",
         "react-dom": "^19.0.0",
         "react-icons": "^5.4.0",
         "react-lottie": "^1.2.10",
